Make popups that are kids of the root popup set have it as their parent; generally make them more like other out-of-flows.  Remove various code that worked around them being different.  Bug 349921, r+sr=roc