layout/xul/base/src/nsPopupSetFrame.cpp
@@ -149,6 +149,54 @@ nsPopupSetFrame::Init(nsIContent*      aContent,
   return rv;
 }
 
+NS_IMETHODIMP
+nsPopupSetFrame::AppendFrames(nsIAtom*        aListName,
+                              nsIFrame*       aFrameList)
+{
+  if (aListName == nsGkAtoms::popupList) {
+    NS_ASSERTION(!aFrameList->GetNextSibling(), "Append one popup at a time!");
+    return AddPopupFrame(aFrameList);
+  }
+
+  return nsBoxFrame::AppendFrames(aListName, aFrameList);
+}
+
+NS_IMETHODIMP
+nsPopupSetFrame::RemoveFrame(nsIAtom*        aListName,
+                             nsIFrame*       aOldFrame)
+{
+  if (aListName == nsGkAtoms::popupList) {
+    return RemovePopupFrame(aOldFrame);
+  }
+
+  return nsBoxFrame::RemoveFrame(aListName, aOldFrame);
+}
+
+#ifdef DEBUG
+NS_IMETHODIMP
+nsPopupSetFrame::InsertFrames(nsIAtom*        aListName,
+                              nsIFrame*       aPrevFrame,
+                              nsIFrame*       aFrameList)
+{
+  NS_PRECONDITION(aListName != nsGkAtoms::popupList,
+               "Shouldn't be inserting popups");
+
+  return nsBoxFrame::InsertFrames(aListName, aPrevFrame, aFrameList);
+}
+
+NS_IMETHODIMP
+nsPopupSetFrame::SetInitialChildList(nsIAtom*        aListName,
+                                     nsIFrame*       aChildList)
+{
+  NS_PRECONDITION(aListName != nsGkAtoms::popupList,
+                  "Shouldn't be setting initial popup child list");
+
+  return nsBoxFrame::SetInitialChildList(aListName, aChildList);
+
+}
+#endif
+
+
 void
 nsPopupSetFrame::Destroy()
 {
